<resources>
    <string name="app_name">"Demus Mayor™"</string>
    <string name="company_name">Demus Mayor</string>
    <string name="contact_email">"customercare@demusmayorlimited.com"</string>
    <string name="contact_phone">"08033456781"</string>
    <string name="welcome">Welcome</string>
    <string name="cancel">Cancel</string>
    <string name="wallet">"Wallet"</string>
    <string name="login">PhoneNumber or Email</string>
    <string name="signin">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="password">Password</string>
    <string name="airtime">Airtime</string>
    <string name="datum">Data</string>
    <string name="loading">Loading…</string>
    <string name="close_menu">Close</string>
    <string name="save_img_success">Image saved successfully</string>
    <string name="save_img_fail">Image could not be saved.</string>
    <string name="save_image">Save Image</string>
    <string name="no_transactions">You have no transactions yet.</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">"Show password"</string>
    <string name="email">Email</string>
    <string name="select_type">Select Type</string>
    <string name="message">Message</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="make_primary">"Make Primary Account"</string>
    <string name="read_more">"Read More…"</string>
    <string name="general_error">"Action failed, please check your connection and try again."</string>
    <string name="no_image">"Image loading failed, please check your connection and try again."</string>
    <string name="socialSignIn">Sign In with your social accounts?</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="confirm">Confirm</string>
    <string name="ref_number">"Referred Number: "</string>
    <string name="ref_amt">"Refer Amount: "</string>
    <string name="register_now">Register now</string>
    <string name="phone_num">"PhoneNumber"</string>
    <string name="fname">"First Name"</string>
    <string name="lname">"Last Name"</string>
    <string name="terms_conditions">"Terms and Conditions"</string>
    <string name="i_agree">I agree to the Demus Mayor Terms of use and privacy policy.</string>
    <string name="accept">"Accept"</string>
    <string name="messages">"Messages"</string>
    <string name="balance">"Balance"</string>
    <string name="terms_agree_error">"You have to agree to the terms of service before you can proceed."</string>
    <string name="account_balance_retry">"Your current balance could not be retrieved, please check your connection and try again."</string>
    <string name="max_20k">"Maximum limit for a referral is \u20A620,000"</string>
    <string name="select_netw">"Select Network"</string>
    <string name="amount">"Amount"</string>
    <string name="amount_optional">"Amount (optional)"</string>
    <string name="enter_secret_pin">"Enter A Secret PIN"</string>
    <string name="no_notif">"Empty Messages"</string>
    <string name="receiver_number">"Receiver's PhoneNumber"</string>
    <string name="recharge">"Recharge"</string>
    <string name="tran_id">"Transaction Ref: "</string>
    <string name="description">"Description"</string>
    <string name="success_status">"Successful"</string>
    <string name="ok">"OK"</string>
    <string name="data_unavail">"Data product unavailable for chosen network."</string>
    <string name="value">"Value"</string>
    <string name="send">"Send"</string>
    <string name="tranx_id_copied">"Transaction Ref copied."</string>
    <string name="tranx_code_err">"Enter the transaction code."</string>
    <string name="tranx_not_found">"Transaction not found"</string>
    <string name="pin_expired_msg">"Demus Mayor will send you a temporary PIN to set your secret PIN. Click 'OK' to enter your password."</string>
    <string name="bank">"Bank"</string>
    <string name="pin">"Secret PIN"</string>
    <string name="old_pin">"Old/Temporary PIN"</string>
    <string name="new_pin">"New PIN"</string>
    <string name="confirm_pin">"Confirm PIN"</string>
    <string name="old_pwd">"Old Password"</string>
    <string name="new_pwd">"New Password"</string>
    <string name="confirm_pwd">"Confirm Password"</string>
    <string name="enter_transaction_code">"Enter transaction code"</string>
    <string name="confirm_referral">"Confirm referral"</string>
    <string name="contact_us">"Contact us"</string>
    <string name="update">"Update"</string>
    <string name="new_update_avail">"New update available will you like to download now?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="register">"Register"</string>
    <string name="enter_access">"Enter the access code sent to your phone number via SMS below:"</string>
    <string name="conf_number">"Phone Verification"</string>
    <string name="pwd_recovery">"Password Recovery"</string>
    <string name="confirm_caps">"CONFIRM"</string>
    <string name="continue_">"Continue"</string>
    <string name="resend_confirm">"Resend Confirmation?"</string>
    <string name="access_invalid">"You have to enter an access code before proceeding."</string>
    <string name="token_invalid">"You have to enter a valid token before proceeding."</string>
    <string name="email_ver_title">"Email Verification"</string>
    <string name="email_verification">"A verification mail has been sent to your email address, please click on confirm button to verify your email. Thank you."</string>
    <string name="enter_your_pin">"Enter Your PIN"</string>
    <string name="reset_pin">"Reset PIN"</string>
    <string name="incorrect_password">"Incorrect password entered, try again."</string>
    <string name="incorrect_pin">"Incorrect PIN entered, try again."</string>
    <string name="minimum_45">"You can only enter amount from \u20A645 and above."</string>
    <string name="minimum_50">"You can only enter amount from \u20A650 and above."</string>
    <string name="send_email">"Send Email"</string>
    <string name="call_confirm">"Call Demus Mayor Customer Care?"</string>
    <string name="contact_pure">"Contact Us"</string>
    <string name="refer_error">"Oops, sorry you can't refer yourself."</string>
    <string name="naira_sign">"\u20A6"</string>
    <string name="general_fail">"Action failed, please check your Internet connection and try again."</string>
    <string name="transaction">"Transaction"</string>
    <string name="error_pin_match">"The PIN entered does not match the confirmation, please try again"</string>
    <string name="error_password_match">"The New password does not match the confirmation, please try again"</string>
    <string name="error_pin_short">"New PIN entered is too short, please try again"</string>
    <string name="acct_number">"Account Number (NUBAN)"</string>
    <string name="transactions">"Transactions"</string>
    <string name="quick_teller">"QuickTeller"</string>
    <string name="reload">"Reload"</string>
    <string name="pin_reset_ft_error">"Please check your connection and try again. A PIN must be created before proceeding."</string>
    <string name="pin_reset_suc">"Your PIN has been successfully reset, please change the temporary PIN sent to you immediately!"</string>
    <string name="select_option">"Select Option…"</string>
    <string name="enter_phone_or_email">Enter your Phone Number or Email below:</string>
    <string name="enter_token">"Please enter the token sent to your email below:"</string>
    <string name="enter_new_password">Enter a New Password below:</string>
    <string name="sample_time">"2 minutes ago"</string>
    <string name="wallet_id">"Wallet ID: "</string>
    <string name="bank_accounts">"Bank Accounts"</string>
    <string name="no_bank_accounts">"You currently have no bank accounts for wallet unloading."</string>
    <string name="primary_account">"Primary Account?"</string>
    <string name="account">"Account"</string>
    <string name="primary_acct_success">"Selected bank account is now your primary account."</string>
    <string name="account_type">"Account Type"</string>
    <string name="acct_stmt_disclaimer">"This service attracts charges. To check for a recent transaction, exit this function and click top right corner of the app on the home page. To continue for account statement click OK"</string>
    <string name="permissions_err">Please allow all required permissions in your settings for a better usage experience.</string>
    <string name="sample_excerpt">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="invalid_email">"Invalid Email."</string>
    <string name="invalid_name">"Invalid Name."</string>
    <string name="error_incomplete">"Please complete all fields."</string>
    <string name="manage_account">Manage Account</string>
    <string name="refer">Refer</string>
    <string name="paystack">Paystack</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV/CVC</string>
    <string name="cvv_hint">Type 3 digits @ back of card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_date_hint">"mm/yy"</string>
    <string name="amount_entry">"Amount (value to load)"</string>
    <string name="pay">Pay</string>
    <string name="invalid_card_number">Invalid card number entered.</string>
    <string name="invalid_cvc">Invalid CVC</string>
    <string name="invalid_expiry">Invalid expiry date entered.</string>
    <string name="invalid_card">Invalid card entered, please check all fields and try again.</string>
    <string name="transaction_error">Transaction Error</string>
    <string name="transaction_error_general">An unexpected error just occurred with this transaction, please try again.</string>
    <string name="verification_error">Verification Error</string>
    <string name="verification_error_msg">Transaction could not be verified, please try again.</string>
    <string name="retry">Retry</string>
    <string name="verification_success">"Transaction verified successfully and subscription confirmed."</string>
    <string name="transaction_canceled">"Transaction canceled."</string>
    <string name="share_stock">"Share Stock"</string>
    <string name="share_stock_sub">"Share value from your stock"</string>
    <string name="change_pin">"Change PIN"</string>
    <string name="change_pin_sub">"Change your secret PIN"</string>
    <string name="acct_stmt">"Account Statement"</string>
    <string name="acct_stmt_sub">"Your current account statement"</string>
    <string name="confirm_tranx">"Confirm Transaction"</string>
    <string name="confirm_tranx_sub">"Check a transaction"</string>
    <string name="change_pass">"Change Password"</string>
    <string name="change_pass_sub">"Change your password"</string>
    <string name="reset_pin_sub">"Reset your secret PIN"</string>
    <string name="load_retail_wallet">Load Retail Wallet</string>
    <string name="refer_someone">Refer Someone</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="contact_demus_mayor">Contact Demus Mayor</string>
    <string name="sign_out">Sign out</string>
    <string name="limited">L&#160;&#160;I&#160;&#160;M&#160;&#160;I&#160;&#160;T&#160;&#160;E&#160;&#160;D</string>
</resources>