<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<include
		android:id="@+id/tool_bar"
		layout="@layout/tool_bar" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dp"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/card_number"
				android:textColor="@color/text_color"
				android:textStyle="bold"
				android:textSize="17sp" />

			<EditText
				android:id="@+id/txtCardNumber"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:ems="10"
				android:inputType="number"
				android:maxLength="20"
				android:singleLine="true"
				android:textColor="#000000"
				android:textSize="16sp" >

				<requestFocus />
			</EditText>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/cvv"
				android:textColor="@color/text_color"
				android:textStyle="bold"
				android:textSize="17sp" />

			<EditText
				android:id="@+id/txtCVV"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:ems="10"
				android:hint="@string/cvv_hint"
				android:maxLength="3"
				android:inputType="number"
				android:singleLine="true"
				android:textColor="#000000"
				android:textSize="16sp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/expiry_date"
				android:textColor="@color/text_color"
				android:textStyle="bold"
				android:textSize="17sp" />

			<EditText
				android:id="@+id/txtExpiryDate"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:ems="10"
				android:hint="@string/expiry_date_hint"
				android:inputType="phone"
				android:maxLength="5"
				android:singleLine="true"
				android:textColor="#000000"
				android:textSize="16sp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/amount"
				android:textColor="@color/text_color"
				android:textStyle="bold"
				android:textSize="17sp" />

			<EditText
				android:id="@+id/txtAmount"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:ems="10"
				android:hint="@string/amount_entry"
				android:inputType="number"
				android:maxLength="5"
				android:singleLine="true"
				android:textColor="#000000"
				android:textSize="16sp" />

			<Button
				android:id="@+id/cmdPay"
				android:layout_width="match_parent"
				android:layout_height="45dp"
				android:layout_marginTop="15dp"
				android:background="#05C148"
				android:text="@string/pay"
				android:textColor="#ffffff"
				android:textSize="16sp" />

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/app_name"
				android:layout_gravity="center_horizontal"
				android:layout_centerInParent="true"
				android:layout_marginTop="15dp"
				android:src="@drawable/paystack_logos" />
		</LinearLayout>

		<RelativeLayout
			android:id="@+id/layProgress"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#A5000000"
			android:visibility="gone"
			android:orientation="vertical">

			<ProgressBar
				android:id="@+id/progressBar"
				android:indeterminate="true"
				android:layout_width="64dp"
				android:layout_height="64dp"
				android:layout_centerInParent="true" />
		</RelativeLayout>
	</FrameLayout>
</LinearLayout>