<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
	android:gravity="center_vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:contentDescription="@string/app_name"
			android:scaleType="fitXY"
			android:src="@drawable/demus_logo" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:visibility="gone"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:gravity="center_vertical"
				android:layout_gravity="center_horizontal"
				android:text="@string/company_name"
				android:textColor="@color/dart_blue"
				android:textSize="30sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="17dp"
				android:textColor="@android:color/black"
				android:text="@string/limited" />
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>