<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
    
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_password"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bgeditshape"
        android:textColorHint="@color/light_gray"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_pwd" >

        <requestFocus />

    </EditText>
    
    <EditText
        android:id="@+id/editTextDialogUserInput2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bgeditshape"
        android:textColorHint="@color/light_gray"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_pwd" />
</LinearLayout>
