<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:scrollbars="none"
	    android:orientation="vertical"
	    tools:ignore="RtlHardcoded" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="45dp"
				android:paddingBottom="45dp"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="90dp"
					android:layout_height="100dp"
					android:layout_gravity="center_horizontal"
					android:contentDescription="@string/app_name"
					android:src="@drawable/demus_logo" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center_vertical"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="35dp"
						android:gravity="center_vertical"
						android:layout_gravity="center_horizontal"
						android:text="@string/company_name"
						android:textColor="@color/dart_blue"
						android:textSize="30sp"
						android:textStyle="bold" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="17dp"
						android:textColor="@android:color/black"
						android:text="@string/limited" />
				</LinearLayout>


			</LinearLayout>


		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="20dp"
		        android:text="@string/contact_us"
		        android:textColor="@color/deeper_gray"
		        android:textStyle="bold"
		        android:textSize="18sp" />

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="#ffffff"
		        android:orientation="vertical">

			    <LinearLayout
			        android:id="@+id/layMail"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="20dp"
			        android:background="?attr/selectableItemBackground"
			        android:orientation="horizontal">

				    <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp"
				        android:layout_marginBottom="5dp"
				        android:layout_gravity="center_vertical"
				        android:text="@string/contact_email"
				        android:textColor="@color/deeper_gray"
						android:drawablePadding="15dp"
						android:drawableLeft="@drawable/mail_icon"
				        android:textSize="18sp" />
			    </LinearLayout>

			    <View
			        android:layout_width="match_parent"
			        android:layout_height="1dp"
			        android:background="@drawable/custom_border2"/>

			    <LinearLayout
			        android:id="@+id/layPhoneCall"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="20dp"
			        android:background="?attr/selectableItemBackground"
			        android:orientation="horizontal">

				    <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="5dp"
						android:drawableLeft="@drawable/contact_icon"
				        android:layout_marginBottom="5dp"
						android:drawablePadding="15dp"
				        android:layout_gravity="center_vertical"
				        android:text="@string/contact_phone"
				        android:textColor="@color/deeper_gray"
				        android:textSize="18sp" />
			    </LinearLayout>
		    </LinearLayout>
	     </LinearLayout>
     </ScrollView>
</LinearLayout>
